--- a/mkinitramfs.conf
+++ b/mkinitramfs.conf
@@ -14,7 +14,7 @@ FILES=""
 
 # define hook need to build into initramfs
 # order is matter for runtime
-HOOKS="base modules udev"
+HOOKS="/usr/share/mkinitramfs/hooks/base /usr/share/mkinitramfs/hooks/modules /usr/share/mkinitramfs/hooks/udev /usr/share/mkinitramfs/hooks/lucyiso"
 
 # define output (path) for initramfs image
 #INITRAMFS="initrd-$(uname -r).img"
