--- a/mkinitramfs.conf
+++ b/mkinitramfs.conf
@@ -14,7 +14,7 @@ FILES=""
 
 # define hook need to build into initramfs
 # order is matter for runtime
-HOOKS="base modules udev lucyiso"
+HOOKS="base modules udev"
 
 # define output (path) for initramfs image
 #INITRAMFS="initrd-$(uname -r).img"
